# tavern

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  srd_correction.yml  world_preset.yml
.github/workflows/: ci.yml  claude-review.yml  deploy-docs.yml  srd-update.yml
backend/tavern/: db.py  main.py  observability.py  srd_db.py
docs/: architecture-snapshot.md  how-to-play.md  index.md  quickstart.md
docs/adr/: ADR-0000-adr-process-and-template.md  ADR-0001-srd-rules-engine.md  ADR-0002-claude-as-narrator.md  ADR-0003-tech-stack.md  ADR-0004-campaign-and-session-lifecycle.md  ADR-0005-client-architecture.md  ADR-0006-authentication-and-authorization.md  ADR-0007-multiplayer-and-realtime-communication.md  ADR-0008-discord-bot-voice-pipeline.md  ADR-0009-interactive-dice-rolling-and-reaction-system.md  ADR-0010-srd-data-source-fork-and-2024-dataset-migration.md  ADR-0011-combat-trigger-via-dedicated-llm-classifier.md  ADR-0012-npc-initiated-combat.md  ADR-0013-npc-lifecycle.md  ADR-0014-surprise-mechanics.md  ADR-0015-narrator-generated-suggested-actions.md  ADR-0016-world-object-persistence.md  ADR-0017-scene-identifier-convention.md  ADR-0018-turn-observability-layer.md  ADR-0019-exploration-state-signals.md
docs/assets/: extra.css
docs/game-design/: campaign-configuration.md  discord-bot.md  (+4 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: setup-repo.sh
(+157 files in other folders)
